assets/css/dup/departures/row.scss
@use "CSS/colors";

.departure-row {
  position: relative;
  height: 208px;

  &:not(:first-child)::before {
    position: absolute;
    top: 0;
    left: 302px;
    width: 1586px;
    height: 4px;
    content: "";
    background-color: colors.$warm-neutral-80;
  }
}

.departure-row__route {
  display: inline-block;
  width: 248px;
  height: 144px;
  margin: 32px;
  vertical-align: middle;

  .departure-row--extended-route_pill & {
    width: 351px;
  }
}

.departure-row__destination {
  display: inline-block;
  vertical-align: middle;
}

.departure-row__time {
  display: inline-block;
  width: 506px;
  margin-right: 32px;
  font-size: 138px;
  vertical-align: middle;
  color: colors.$cool-black-15;
  text-align: right;

  .departures-section--extended-times & {
    width: 733px;
  }
}

.departure-times-with-crowding {
  display: inline-block;
}

.departure-row__first {
  display: inline-block;
  margin-right: 32px;
  font-size: 108px;
}

